--- a/NTwain/NTwain.csproj
+++ b/NTwain/NTwain.csproj
@@ -33,11 +33,23 @@
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+  <!--<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="System.Drawing.Common">
       <Version>5.0.2</Version>
     </PackageReference>
     <PackageReference Include="System.Security.Permissions">
+      <Version>5.0.0</Version>
+    </PackageReference>
+  </ItemGroup>-->
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
+    <PackageReference Include="System.Text.Encoding.CodePages">
+      <Version>5.0.0</Version>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net5.0-windows'">
+    <PackageReference Include="System.Text.Encoding.CodePages">
       <Version>5.0.0</Version>
     </PackageReference>
   </ItemGroup>
