--- a/samples/Net5Console/Net5Console.csproj
+++ b/samples/Net5Console/Net5Console.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
-    <!--<PlatformTarget>x86</PlatformTarget>-->
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
