--- a/NTwain/NTwain.csproj
+++ b/NTwain/NTwain.csproj
@@ -31,6 +31,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
 
   <!--<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
