--- a/samples/Net5Console/Net5Console.csproj
+++ b/samples/Net5Console/Net5Console.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\NTwain\NTwain.csproj" />
+    <ProjectReference Include="..\..\src\NTwain\NTwain.csproj" />
   </ItemGroup>
 
 </Project>
