--- a/src/NTwain/NTwain.csproj
+++ b/src/NTwain/NTwain.csproj
@@ -3,22 +3,21 @@
   <PropertyGroup>
     <PackageId>NTwain</PackageId>
     <Description>Library containing the TWAIN API for dotnet.</Description>
-    <TargetFrameworks>net45;netcoreapp3.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>net45;netstandard2.0;netcoreapp3.1;net5.0</TargetFrameworks>
   </PropertyGroup>
   
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
 
-  <!--<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="System.Drawing.Common">
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <!--<PackageReference Include="System.Drawing.Common">
       <Version>5.0.2</Version>
-    </PackageReference>
-    <PackageReference Include="System.Security.Permissions">
+    </PackageReference>-->
+    <PackageReference Include="System.Text.Encoding.CodePages">
       <Version>5.0.0</Version>
     </PackageReference>
-  </ItemGroup>-->
+  </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
     <PackageReference Include="System.Text.Encoding.CodePages">
