--- a/src/NTwain/NTwain.csproj
+++ b/src/NTwain/NTwain.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <PackageId>NTwain</PackageId>
     <Description>Library containing the TWAIN API for dotnet.</Description>
-    <TargetFrameworks>net45;netstandard2.0;netcoreapp3.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>net45;netstandard2.0;</TargetFrameworks>
   </PropertyGroup>
   
   <ItemGroup>
@@ -11,24 +11,8 @@
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <!--<PackageReference Include="System.Drawing.Common">
-      <Version>5.0.2</Version>
-    </PackageReference>-->
     <PackageReference Include="System.Text.Encoding.CodePages">
       <Version>5.0.0</Version>
     </PackageReference>
   </ItemGroup>
-
-  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
-    <PackageReference Include="System.Text.Encoding.CodePages">
-      <Version>5.0.0</Version>
-    </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
-    <PackageReference Include="System.Text.Encoding.CodePages">
-      <Version>5.0.0</Version>
-    </PackageReference>
-  </ItemGroup>
-
 </Project>
