--- a/src/NTwain/NTwain.csproj
+++ b/src/NTwain/NTwain.csproj
@@ -3,9 +3,9 @@
 	<PropertyGroup>
 		<PackageId>NTwain</PackageId>
 		<Description>Library containing the TWAIN API for dotnet.</Description>
-		<TargetFrameworks>net462;netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
+		<TargetFrameworks>net462;netcoreapp3.1;net5.0;net6.0;net7.0;netstandard2.0</TargetFrameworks>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-		<LangVersion>10.0</LangVersion>
+		<LangVersion>11</LangVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
