--- a/src/NTwain/NTwain.csproj
+++ b/src/NTwain/NTwain.csproj
@@ -3,10 +3,11 @@
 	<PropertyGroup>
 		<PackageId>NTwain</PackageId>
 		<Description>Library containing the TWAIN API for dotnet.</Description>
-		<TargetFrameworks>net462;netcoreapp3.1;net5.0;net6.0;net7.0;netstandard2.0</TargetFrameworks>
+		<TargetFrameworks>net462;net6.0;net7.0;netstandard2.0</TargetFrameworks>
+    <Nullable>enable</Nullable>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-		<LangVersion>11</LangVersion>
-	</PropertyGroup>
+  </PropertyGroup>
+
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
