--- a/src/NTwain-temp/NTwain-temp.csproj
+++ b/src/NTwain-temp/NTwain-temp.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<PackageId>NTwain</PackageId>
 		<Description>Library containing the TWAIN API for dotnet.</Description>
-		<TargetFrameworks>net462;netcoreapp3.1;net5.0;net6.0;net7.0;netstandard2.0</TargetFrameworks>
+		<TargetFrameworks>net462;net6.0;net7.0;netstandard2.0</TargetFrameworks>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<LangVersion>11</LangVersion>
 	</PropertyGroup>
