--- a/src/NTwain/NTwain.csproj
+++ b/src/NTwain/NTwain.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<PackageId>NTwain</PackageId>
 		<Description>Library containing the TWAIN API for dotnet.</Description>
-		<TargetFrameworks>net462;net6.0;net7.0;netstandard2.0</TargetFrameworks>
+		<TargetFrameworks>net462;net6.0</TargetFrameworks>
     <Nullable>enable</Nullable>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
