--- a/samples/Console32/Console32.csproj
+++ b/samples/Console32/Console32.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <TargetFrameworks>net462;net7.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <PlatformTarget>x86</PlatformTarget>
     <RootNamespace>SampleConsole</RootNamespace>
+	  <LangVersion>11</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
