--- a/src/NTwain/NTwain.csproj
+++ b/src/NTwain/NTwain.csproj
@@ -1,15 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<PackageId>NTwain</PackageId>
-		<Description>Library containing the TWAIN API for dotnet.</Description>
-		<TargetFrameworks>net6.0;net462;</TargetFrameworks>
+  <PropertyGroup>
+    <PackageId>NTwain</PackageId>
+    <Description>Library containing the TWAIN API for dotnet.</Description>
+    <TargetFrameworks>net6.0;net6.0-windows;net462;</TargetFrameworks>
     <Nullable>enable</Nullable>
-		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'net462' OR '$(TargetFramework)' == 'net6.0-windows'">
+    <UseWPF>true</UseWPF>
+  </PropertyGroup>
 
-	<ItemGroup>
+  <ItemGroup>
     <PackageReference Include="System.Text.Encoding.CodePages" Version="7.0.0" />
-	</ItemGroup>
+  </ItemGroup>
 </Project>
