--- a/src/NTwain/NTwain.csproj
+++ b/src/NTwain/NTwain.csproj
@@ -5,7 +5,7 @@
     <Description>Library containing the TWAIN API for dotnet.</Description>
     <TargetFrameworks>net6.0;net6.0-windows;net462;</TargetFrameworks>
     <Nullable>enable</Nullable>
-    <!--<AllowUnsafeBlocks>true</AllowUnsafeBlocks>-->
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(TargetFramework)' == 'net462' OR '$(TargetFramework)' == 'net6.0-windows'">
