Add 64bit tester and fixed version # in builds by switching to v6 sdk.

--- a/samples/WinForm32/WinForm32.csproj
+++ b/samples/WinForm32/WinForm32.csproj
@@ -6,10 +6,17 @@
 		<Nullable>enable</Nullable>
 		<UseWindowsForms>true</UseWindowsForms>
 		<PlatformTarget>x86</PlatformTarget>
+    <RootNamespace>WinFormSample</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\src\NTwain\NTwain.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="platforms\qwindows.dll">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
