--- a/samples/WinForm32/WinForm32.csproj
+++ b/samples/WinForm32/WinForm32.csproj
@@ -10,6 +10,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Magick.NET-Q8-x86" Version="13.0.1" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <ProjectReference Include="..\..\src\NTwain\NTwain.csproj" />
 	</ItemGroup>
 
@@ -17,7 +21,7 @@
 	  <None Update="platforms\qwindows.dll">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
-	  <None Update="platforms\TWAINDSM.dll">
+	  <None Update="runtimes\win-x86\native\TWAINDSM.dll">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
 	</ItemGroup>
