--- a/src/NTwain/NTwain.csproj
+++ b/src/NTwain/NTwain.csproj
@@ -13,17 +13,15 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
-  <ItemGroup>
-  </ItemGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'net462'">
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="System.Buffers" Version="4.5.1" />
+    <!--<PackageReference Include="System.Buffers" Version="4.5.1" />-->
+    <PackageReference Include="System.Memory" Version="4.5.5" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' != 'net462'">
     <PackageReference Include="System.Text.Encoding.CodePages" Version="7.0.0" />
   </ItemGroup>
-
+  
   <ItemGroup>
     <None Update="DSM\DSMGenerator.dummy">
       <DesignTime>True</DesignTime>
