--- a/src/NTwain/NTwain.csproj
+++ b/src/NTwain/NTwain.csproj
@@ -15,9 +15,11 @@
     <!--<SignAssembly>true</SignAssembly>-->
     <!--<AssemblyOriginatorKeyFile>Sign.snk</AssemblyOriginatorKeyFile>-->
     <AssemblyVersion>3.0.0.0</AssemblyVersion>
-    <FileVersion>3.7.3</FileVersion>
-    <Version>3.7.3</Version>
+    <FileVersion>3.7.4</FileVersion>
+    <Version>3.7.4</Version>
     <LangVersion>7.1</LangVersion>
+    <SignAssembly>True</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\..\release-build\strong-name.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
